# LBS-UI-Tool

./: README.md  pyproject.toml
docs/plans/: 2026-07-02-lbs-ui-tool-implementation.md
docs/specs/: 2026-07-01-lbs-ui-tool-design.md
src/lbs_ui_tool/: __init__.py  __main__.py  backend.py  pika_compiler.py
src/lbs_ui_tool/profiles/: base.py  new_ai.py  next_ai.py  registry.py  spark_ai.py
src/lbs_ui_tool/protocol/: frame_codec.py  frame_file_transfer.py  serial_transport.py  ymodem.py
src/lbs_ui_tool/qml/: main.qml
src/lbs_ui_tool/qml/ui/: Card.qml  FirmwarePage.qml  HomePage.qml  MonitorPage.qml  PageHeader.qml  ProductCard.qml  PythonPage.qml  SensorPage.qml  SidebarButton.qml  Theme.qml  WorkspacePage.qml
tests/: test_backend.py  test_integration.py  test_main.py  test_pika_compiler.py
tests/profiles/: test_base.py  test_new_ai.py  test_next_ai.py  test_registry.py  test_scan_firmware_dir.py  test_spark_ai.py
tests/protocol/: test_frame_codec.py  test_frame_file_transfer.py  test_serial_transport.py  test_ymodem.py
